[package]
name = "market-making"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
krakenrs = "5.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rust_decimal = "1.37"